--- a/MVC_Movie/Views/Movies/Index.cshtml
+++ b/MVC_Movie/Views/Movies/Index.cshtml
@@ -9,15 +9,15 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<form asp-controller="Movies" asp-action="Index" method="get">
-    <p>
-
-        <select asp-for="MovieGenre" asp-items="Model.Genres">
+<form class="inverse" asp-controller="Movies" asp-action="Index" method="get">
+    <p class="form-row">
+        <select class="form-control border col-sm-5" asp-for="MovieGenre" asp-items="Model.Genres">
             <option value="">All</option>
         </select>
 
-        Title: <input type="text" asp-for="SearchString" />
-        <input type="submit" value="Filter" />
+        <label class="align-center"for="searchTitleInput">Title:&nbsp</label>
+        <input id="searchTitleInput" class="form-control border col-sm-5" type="text" asp-for="SearchString" />
+        <input class="btn btn-outline-primary inverse" type="submit" value="Filter" />
     </p>
 </form>
 
@@ -35,6 +35,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Movies[0].Price)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Movies[0].Rating)
             </th>
             <th></th>
         </tr>
@@ -54,6 +57,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Rating)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
