--- a/MVC_Movie/Views/Movies/Index.cshtml
+++ b/MVC_Movie/Views/Movies/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-outline-primary" asp-action="Create">Create New</a>
 </p>
 <form class="inverse" asp-controller="Movies" asp-action="Index" method="get">
     <p class="form-row">
